<resources>
    <string name="app_name">Draw With Julia</string>

    <string name="accept_sign_dialog">Vol guardar la signatura?</string>
    <string name="cancel_sign_dialog">Està segur que vol cancel·lar la signatura?</string>

    <!-- Edit buttons -->
    <string name="save">Save</string>
    <string name="exit">Exit   </string>
    <string name="apply">Apply</string>
    <string name="camera">Camera</string>
    <string name="brightness">Brightness</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="pen">Pen</string>
    <string name="move">Move</string>
    <string name="rubber">Rubber</string>
    <string name="drawAttr">Draw Attr</string>
    <string name="text">Text</string>
    <string name="figures">Figures</string>

    <string name="yes">Si</string>
    <string name="no">No</string>

    <string name="ok">OK</string>

    <string name="reset_settings">Restablir configuració</string>
    <string name="to_reset_settings">Vols recuperar els atributs per defecte?</string>

    <string name="save_image">Vols guardar la imatge?</string>
    <string name="apply_changes">Vols aplicar els canvis?</string>
    <string name="existing_image">La imatge ja està editada. Què vols fer?</string>
    <string name="replace_image">Reemplaçar-la</string>
    <string name="new_image">Crear-ne una nova</string>

    <string name="delete_images">Vols esborrar les imatges?</string>
    <string name="delete_image">Vols esborrar la imatge?</string>

    <!-- Figures buttons -->
    <string name="curve">Curve</string>
    <string name="line">Line</string>
    <string name="arrow">Arrow</string>
    <string name="two_arrow">Two Arrow</string>
    <string name="rectangle">Rect</string>
    <string name="circle">Circle</string>
    <string name="ellipse">Ellipse</string>

    <!-- Draw Attributes -->

    <string name="stroke_width">Stroke width: %d</string>
    <string name="text_size">Text size: %d</string>
    <string name="opacity">Opacity: %d</string>
    <string name="font_size">Font size: %d</string>

</resources>
